--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,9 @@ body {
   background-color: white !important;
   border-radius: 16px !important;
   background-color: #E9D7FF;
+  background: #FFFBFF;
+box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
+border-radius: 100px;
 }
 
 .playful-boton-header {
@@ -90,4 +93,30 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+/************CSS CLASES GLOBALES*************/ 
+
+.playful-h1 {
+  font-family: var(--font-paytone-one), var(--font-montserrat), sans-serif;
+  font-weight: 400;
+  line-height: 1.1;
+  font-size: 72px;
+  color: #440099;
+}
+
+.playful-miga-pan {
+  font-family: var(--font-paytone-one), var(--font-montserrat), sans-serif;
+  font-weight: 400;
+  line-height: 1.1;
+  font-size: 28px;
+  color: #4A4453;
+}
+
+.playful-contenido-p {
+  font-family: var(--font-dm-sans), sans-serif;
+  font-weight: 400;
+  line-height: 1.1;
+  font-size: 16px;
+  color: #4A4453;
 }
