--- a/app/globals.css
+++ b/app/globals.css
@@ -672,3 +672,107 @@ body {
       margin-bottom: 6px;
   }
 }
+
+
+
+/* Footer */
+
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .logo {
+    padding: 0px;
+  }
+
+  .playful-footerInfo {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+
+  .footerCard {
+    width: 111.5% !important;
+    margin: 0px 0px 50px 0px;
+    height: 329px;
+
+  }
+
+  .logo {
+    padding: 0px;
+  }
+
+  .playful-footerInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .playful-footerItems{
+    width: 50%;
+  }
+  .playful-Grid-CasosExito{
+    width: 100% !important;
+  }
+  .playful-movil-testimonialCard{
+   padding: 0px !important; 
+  }
+  
+}
+
+
+/* El Footer que FRAO*/
+
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .logo {
+    padding: 0px;
+  }
+
+  .playful-footerInfo {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+
+
+  .footerCard {
+    width: 111.5% !important;
+    margin: 0px 0px 50px 0px;
+    height: 329px;
+
+  }
+
+  .logo {
+    padding: 0px;
+  }
+
+  .playful-footerInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .playful-footerItems{
+    width: 50%;
+  }
+  .playful-Grid-CasosExito{
+    width: 100% !important;
+  }
+  .playful-movil-testimonialCard{
+   padding: 0px !important; 
+  }
+  
+}
