--- a/app/globals.css
+++ b/app/globals.css
@@ -726,7 +726,7 @@ body {
 }
 
 
-/* El Footer que FRAO*/
+/* El Footer movil que FRAO*/
 
 @media only screen and (min-width: 500px) and (max-width: 768px) {
   .footer {
