--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,10 @@ body {
   background-color: #5724AB !important;
 }
 
+.playful-footer-mora {
+  background-color: #5724AB !important;
+}
+
 /* Typography Classes */
 @layer components {
   .title-large {
