--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,19 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   font-family: var(--font-dm-sans), sans-serif;
   background-image: url(/images/background.webp);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .playful-header-mora {
@@ -305,7 +312,7 @@ body {
 @media (max-width: 599px) {
 
   .playful-header nav {
-    margin: 10px 10px !important;
+    margin: 10px 0px !important;
   }
 
   /* Tipografía */
@@ -318,7 +325,7 @@ body {
   .playful-header {
       margin: 0px 0px !important;
       padding: 15px;
-      border-radius: 40px;
+      border-radius: 0px;
   }
   .playful-contenedor {
       padding: 40px !important;
