--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,10 @@ body {
 
 /* Tipografía Base (Desktop) */
 
+.detalle-blog-fondo {
+  background-color: #fef7ff;
+}
+
 @layer base {
   h1, h2, h3, h4, h5, h6 {
     @apply font-paytone;
