--- a/app/globals.css
+++ b/app/globals.css
@@ -23,10 +23,6 @@ html {
 
 body {
   font-family: var(--font-dm-sans), sans-serif;
-  background-image: url(/images/background.webp);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   overflow-x: hidden;
   max-width: 100vw;
 }
@@ -792,4 +788,13 @@ body {
   .footerCard {
     width: 108.5% !important;
   }
+}
+
+/* Body background styles */
+body.bg-casos-exito {
+  background-color: #5724AB;
+}
+
+body.bg-other-page {
+  background-color: #E9D7FF;
 }
