--- a/app/globals.css
+++ b/app/globals.css
@@ -17,13 +17,11 @@
 }
 
 html {
-  overflow-x: hidden;
   max-width: 100vw;
 }
 
 body {
   font-family: var(--font-dm-sans), sans-serif;
-  overflow-x: hidden;
   max-width: 100vw;
 }
 
@@ -170,17 +168,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: transparent;
+  padding: 40px 80px 0;
 }
 
 .playful-header nav{
-  margin: 40px 80px !important;
+  margin: 0 !important;
   padding: 20px;
   background: #FFFBFF;
   box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
   border-radius: 100px;
   width: 100%;
   max-width: 1200px;
-  /**max-width: 1200px; /* <--- NUEVO: Limita el ancho máximo del header */
 }
 
 .playful-boton-header {
@@ -363,7 +362,7 @@ body {
   
   /* Layouts */
   .playful-header {
-      margin: 30px 40px !important;
+      padding: 30px 40px 0 !important;
       border-radius: 60px;
   }
   .playful-contenedor {
@@ -403,7 +402,7 @@ body {
 @media (max-width: 599px) {
 
   .playful-header nav {
-    margin: 10px 0px !important;
+    margin: 0 !important;
   }
 
   /* Tipografía */
@@ -414,8 +413,7 @@ body {
 
   /* Layouts */
   .playful-header {
-      margin: 0px 0px !important;
-      padding: 15px;
+      padding: 15px 15px 0;
       border-radius: 0px;
   }
   .playful-contenedor {
