--- a/app/globals.css
+++ b/app/globals.css
@@ -722,120 +722,54 @@ body {
 
 
 
-/* Footer */
+/* Footer - Media Queries Consolidadas */
 
-@media only screen and (min-width: 500px) and (max-width: 768px) {
+/* Tablets y móviles grandes (769px - 1023px) */
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
   .footer {
-    display: flex;
-    flex-direction: row;
+    padding: 4.2rem 0px;
   }
-  .logo {
-    padding: 0px;
-  }
-  .playful-footerInfo {
-    display: flex;
-    flex-direction: column;
-    margin-left: 25%;
-  }
-}
-
-@media only screen and (max-width: 425px) {
+  
   .footerCard {
-    width: 111.5% !important;
-    margin: 0px 0px 50px 0px;
-    height: 329px;
+    width: 82% !important;
+    margin: 0px !important;
   }
-  .logo {
-    padding: 0px;
-  }
-  .playful-footerInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .playful-footerItems{
-    width: 50%;
-  }
-  .playful-Grid-CasosExito{
-    width: 100% !important;
-  }
-  .playful-movil-testimonialCard{
-   padding: 0px !important; 
-  }  
 }
 
-
-/* El Footer movil que FRAO*/
-
+/* Tablets pequeñas (500px - 768px) */
 @media only screen and (min-width: 500px) and (max-width: 768px) {
   .footer {
     display: flex;
     flex-direction: row;
     padding: 2.1rem;
   }
+  
   .logo {
     padding: 0px;
   }
+  
   .playful-footerInfo {
     display: flex;
     flex-direction: column;
     margin-left: 25%;
-    
   }
 }
 
-@media only screen and (max-width: 425px) {
-  .footerCard {
-    width: 111.5% !important;
-    margin: 0px 0px 50px 0px;
-    height: 329px;
+/* Móviles medianos (480px - 575px) */
+@media only screen and (min-width: 480px) and (max-width: 575px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
   }
-  .logo {
-    padding: 0px;
-  }
+
   .playful-footerInfo {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .playful-footerItems{
-    width: 50%;
-  }
-  .playful-Grid-CasosExito{
-    width: 100% !important;
-  }
-  .playful-movil-testimonialCard{
-   padding: 0px !important; 
-  }  
-}
-
-
-@media only screen and (min-width: 480px) and (max-width: 575px) {
-   .footer{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .playful-footerInfo{
-     display: flex;
     flex-direction: row;
     margin-left: 0px;
   }
 }
 
-@media only screen and (min-width: 769px) and (max-width: 1023px) {
-  
-  .footer{
-    padding: 4.2rem 0px;
-  }
-  
-   .footerCard {
-    width: 82% !important;
-    margin: 0px !important;
-    
-  }
-}
-
+/* Móviles (426px - 570px) */
 @media (min-width: 426px) and (max-width: 570px) {
   .playful-footerInfo {
     display: flex;
@@ -848,9 +782,30 @@ body {
   }
 }
 
+/* Móviles pequeños (max-width: 425px) */
 @media only screen and (max-width: 425px) {
   .footerCard {
     width: 108.5% !important;
+    margin: 0px 0px 50px 0px;
+    height: 329px;
+  }
+  
+  .logo {
+    padding: 0px;
+  }
+  
+  .playful-footerInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .playful-footerItems {
+    width: 50%;
+  }
+  
+  .playful-Grid-CasosExito {
+    width: 100% !important;
   }
 }
 
